[package]
name = "ballpoint"
version = "0.1.0"
authors = ["berwyn <berwyn.codeweaver@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
"std" = ["nom/std", "serde/std"]

[dependencies]
nom = { version = "6.0.1", default-features = false }
serde = { version = "1.0.123", default-features = false }
thiserror = "1.0.24"

[dev-dependencies]
serde_json = "1.0.64"
pretty_assertions = "0.6.1"
